--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
     <head>
         <title>Cameron MacDonald</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.css" />
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/foundation.css">
     </head>
+    <body>
+        <h1>Hello World</h1>
+
+        <script src="js/app.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
+    </body>
 </html>
